# meta

./: .codeclimate.yml  .travis.yml  AUTHORS.md  CHANGES.md  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README  README.md  aes_siv.gemspec  ci.sh  cmac.bench.ts  cmac.gemspec  cmac.go  cmac.test.ts  cmac.ts  cmac_aes_test.go  package.json  siv.bench.ts  siv.go  siv.test.ts  siv.ts  siv_test.go
ci/: go.sh  js.sh  python.sh  ruby.sh  rust.sh
docs/: index.html
dotnet/: Miscreant.sln  README.md  ci.sh
dotnet/Miscreant/: Aead.cs  AesCmac.cs  AesCtr.cs  AesPmac.cs  AesSiv.cs  AssemblyInfo.cs  Constants.cs  IMac.cs  Miscreant.csproj  NonceEncoder.cs  StreamDecryptor.cs  StreamEncryptor.cs  Subtle.cs  Utils.cs
dotnet/Miscreant.Benchmarks/: AesCmacBenchmark.cs  AesSivBenchmark.cs  MacBenchmark.cs  Miscreant.Benchmarks.csproj  Program.cs  SivBenchmark.cs
dotnet/Miscreant.Examples/: Miscreant.Examples.csproj  Program.cs
dotnet/Miscreant.Tests/: AeadTest.cs  AesCmacTest.cs  AesCtrTest.cs  AesSivTest.cs  Hex.cs  MacTest.cs  Miscreant.Tests.csproj  StreamTest.cs  UtilsTest.cs
go/: LICENSE  README.md  aead.go  aead_test.go  ci.sh  siv.go  siv_test.go  sivchain.go  sivchain_test.go  stream_test.go
go/block/: block.go  block_test.go
go/cmac/: cmac.go  cmac_aes_test.go
go/pmac/: pmac.go  pmac_aes_test.go
js/: LICENSE  LICENSE.txt  README.md  aes.bench.ts  aes.test.ts  aes.ts  ci.sh  constant-time.test.ts  constant-time.ts  ctr.bench.ts  ctr.test.ts  ctr.ts  gulpfile.js  index.ts  package.json  siv.test.ts  siv.ts  tsconfig.json  tsfmt.json  tslint.json  webpack.config.js  wipe.test.ts  wipe.ts
js/bench/: aes.bench.ts  benchmark.ts  cmac.bench.ts  ctr.bench.ts  siv.bench.ts
js/src/: aead.ts  aes.ts  binary.ts  blockcipher.ts  cmac.ts  constant-time.ts  ctr.ts  exceptions.ts  index.ts  int.ts  interfaces.ts  miscreant.ts  siv.ts  sivchain.ts  stream.ts  wipe.ts
js/test/: aes.spec.ts  aes_cmac.spec.ts  aes_ctr.spec.ts  aes_pmac.spec.ts  aes_pmac_siv.spec.ts  aes_siv.spec.ts  aes_siv_aead.spec.ts  aes_siv_stream.spec.ts  binary.spec.ts  block.spec.ts  cmac.spec.ts  constant-time.spec.ts  ctr.spec.ts  int.spec.ts  miscreant.spec.ts  sivchain.spec.ts  util.spec.ts  wipe.spec.ts
lib/: cmac.rb
lib/aes_siv/: version.rb
lib/cmac/: exception.rb  version.rb
python/: .gitignore  .pylintrc  README.md  ci.sh  requirements.txt  setup.py
python/miscreant/: __init__.py  aead.py  block.py  ct.py  ctz.py  exceptions.py  stream.py  util.py
python/sivchain/: __init__.py  exceptions.py
python/tests/: test_aead.py  test_aes_siv.py  test_block.py  test_pmac.py  test_sivchain.py  test_stream.py  (+1 more)
ruby/: .gitignore  .rakeTasks  .rspec  .rubocop.yml  Gemfile  LICENSE  LICENSE.txt  README.md  Rakefile  ci.bat  ci.sh  miscreant.gemspec  sivchain.gemspec
rust/: .gitignore  Cargo.toml  README.md  ci.sh
rust/include/: miscreant.h
rust/src/: aead.rs  bench.rs  buffer.rs  ctr.rs  error.rs  ffi.rs  kdf.rs  lib.rs  s2v.rs  siv.rs  stream.rs
rust/src/internals/: aes.rs  block.rs  block_cipher.rs  cmac.rs  ctr.rs  dbl.asm  dbl.rs  mac.rs  mod.rs  pmac.rs  util.rs  xor.rs
rust/src/internals/mac/: cmac.rs  mod.rs  pmac.rs
rust/src/internals/util/: dbl.rs  mod.rs
rust/tests/: aead_test.rs  lib.rs  siv_test.rs  stream_test.rs  test_vectors.rs
rust/tests/aead_vectors/: mod.rs
rust/tests/ffi/: .gitignore  Makefile  ffi_test.c
rust/tests/siv_vectors/: mod.rs
rust/tests/stream_vectors/: mod.rs
spec/: cmac_spec.rb  spec_helper.rb  test_vectors.txt
test/: test_helper.rb
vectors/: aes.tjson  aes_cmac.tjson  aes_ctr.tjson  aes_pmac.tjson  aes_pmac_siv.tjson  aes_siv.tjson  aes_siv_aead.tjson  aes_siv_stream.tjson  dbl.tjson
(+102 files in other folders)
