[package]
name        = "miscreant"
description = "Misuse-resistant symmetric encryption using the AES-SIV (RFC 5297) and CHAIN/STREAM constructions"
version     = "0.2.0"
license     = "MIT"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://miscreant.io"
repository  = "https://github.com/miscreant/miscreant/tree/master/rust"
readme      = "README.md"
categories  = ["cryptography", "no-std"]
keywords    = ["cryptography", "encryption", "security", "streaming"]

[dependencies]
aesni = { git = "https://github.com/RustCrypto/block-ciphers.git" }
arrayref = "0.3"
byteorder = { version = "1.1", default-features = false, features = ["i128"] }
clear_on_drop = { version = "0.2", features = ["nightly"] }
subtle = { version = "0.2", default-features = false }
ring = { version = "0.11", optional = true }

[dev-dependencies]
data-encoding = "2.0"
serde_json = "1"

[features]
bench = ["ring"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[patch.crates-io.block-cipher-trait]
git = "https://github.com/RustCrypto/traits.git"