[package]
name        = "miscreant"
description = "Misuse resistant symmetric encryption library providing AES-SIV (RFC 5297), AES-PMAC-SIV, and STREAM constructions"
version     = "0.3.0"
license     = "MIT"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://miscreant.io"
repository  = "https://github.com/miscreant/miscreant/tree/master/rust"
readme      = "README.md"
categories  = ["cryptography", "no-std"]
keywords    = ["cryptography", "encryption", "security", "streaming"]

[dependencies]
aesni = "0.2"
crypto-mac = "0.6"
block-cipher-trait = "0.5"
byteorder = { version = "1.2", default-features = false }
clear_on_drop = { version = "0.2", features = ["nightly"] }
cmac = "0.1"
dbl = "0.1"
generic-array = "0.9"
pmac = "0.1"
ring = { version = "0.11", optional = true }
subtle = { version = "0.3", default-features = false }

[dev-dependencies]
data-encoding = "2.0"
serde_json = "1"

[features]
bench = ["ring"]
default = ["std"]
std = []

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
