[package]
name        = "miscreant"
description = "Misuse resistant symmetric encryption library providing AES-SIV (RFC 5297), AES-PMAC-SIV, and STREAM constructions"
version     = "0.3.0"
license     = "MIT/Apache-2.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://miscreant.io"
repository  = "https://github.com/miscreant/miscreant/tree/master/rust"
readme      = "README.md"
categories  = ["cryptography", "no-std"]
keywords    = ["cryptography", "encryption", "security", "streaming"]

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
aes = "0.1.0"
crypto-mac = "0.6"
block-modes = "0.1"
byteorder = { version = "1.2", default-features = false }
clear_on_drop = { version = "0.2" }
cmac = "0.1"
dbl = "0.1"
pmac = "0.1"
ring = { version = "0.11", optional = true }
subtle = { version = "0.3", default-features = false }

[dev-dependencies]
data-encoding = "2.0"
serde_json = "1"

[features]
bench = ["ring"]
default = ["std"]
staticlib = []
std = []
aes-soft = ["aes/force_soft"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[package.metadata.docs.rs]
all-features = true